Changed a very important lin

--- a/search.conf
+++ b/search.conf
@@ -1,8 +1,7 @@
 [API]
 
-API_KEY = YOUR KEY HERE
+API_KEY = 6NXV6YdlSMfNJZ0kZlexPNkOkcKJgW8s
 
 [SEARCH]
 
-default_query = net:192.168.1.1/24
 default_attributes = ports
